--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -9,13 +9,13 @@
     overflow: auto;
 }
 
-.mainPane{
+.mainPane {
     margin-left: 20%;
     padding: 1px 16px;
 }
 
-img{
-    width: 50%;
-    height: auto;
+img {
+    width: 95%;
+    height: 90%;
 
 }
