--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,19 @@
     float: left;
     width: 71%
 }
+
+#topButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  font-size: 18px;
+  z-index: 1;
+  background-color: #ff0000;
+  color: white;
+  cursor: pointer;
+  padding: 5px 30px 5px 30px;
+}
+
+#topButton:hover {
+  background-color: #cc0000;
