--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@
     width: 71%
 }
 
+.carousel-inner img {
+  width: auto;
+  height: 400px;
+  max-height: 400px;
+}
+
 #topButton {
   display: none;
   position: fixed;
