--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,15 @@
 .articleThumb {
-    display: block;
-    width: 100%;
-    height: auto;
-}
+  display: block;
+  width: 100%;
+  height: auto; }
 
 .fixed {
-    position: fixed;
-    width: 25%;
-}
+  position: fixed;
+  width: 25%; }
 
 .scrollit {
-    float: left;
-    width: 71%
-}
+  float: left;
+  width: 71%; }
 
 .carousel-inner img {
   width: auto;
@@ -28,5 +25,41 @@
   font-size: 18px;
   z-index: 1;
   cursor: pointer;
-  padding: 5px 30px 5px 30px;
-}
+  padding: 5px 30px 5px 30px; }
+
+nav div.logo-container {
+  display: flex;
+  flex-flow: column;
+  align-content: center; }
+  nav div.logo-container img {
+    margin: auto;
+    width: 100%; }
+
+#content {
+  min-height: 100vh; }
+
+#feed {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-flow: dense;
+  grid-gap: 0.5rem;
+  background: #e6e6e6;
+  padding-top: 0.5rem; }
+  #feed div.article {
+    padding: 0;
+    background: #fff !important; }
+    #feed div.article img.article-thumb {
+      width: 100%;
+      height: 200px;
+      object-fit: cover; }
+    #feed div.article div.article-details {
+      padding: 1rem; }
+      #feed div.article div.article-details p.article-title a {
+        font-size: 18px;
+        font-weight: 700;
+        color: #236192; }
+        #feed div.article div.article-details p.article-title a:hover {
+          text-decoration: underline;
+          cursor: pointer; }
+
+/*# sourceMappingURL=styles.css.map */
