--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,13 @@
   width: 100%;
   height: auto; }
 
+div.carousel-item {
+  max-height: 400px; }
+  div.carousel-item img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover; }
+
 .fixed {
   position: fixed;
   width: 25%; }
@@ -10,12 +17,6 @@
 .scrollit {
   float: left;
   width: 71%; }
-
-.carousel-inner img {
-  width: auto;
-  height: 400px;
-  max-height: 400px;
-}
 
 #topButton {
   display: none;
@@ -63,18 +64,3 @@ nav div.logo-container {
           cursor: pointer; }
 
 /*# sourceMappingURL=styles.css.map */
-
-/* CSS for said quiz http://www.hungrypiranha.org/make-a-website/html-quiz */
-#categorylist { 
-  margin-top: 6px; 
-  display: none; 
-  } 
-  
-  #category1, #category2, #category3, #category4, #category5{ 
-  display: none; 
-  }
-  
-  #closing {
-  display: none;
-  font-style: italic;
-  }
