--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,18 @@
   height: auto;
 }
 
+div.carousel-item
+{
+  max-height: 400px;
+
+  img
+  {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  }
+}
+
 .fixed {
   position: fixed;
   width: 25%;
