Made overlay more visible and added link to title

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,18 @@ div.carousel-item {
     width: 100%;
     height: 400px;
     object-fit: cover; }
+  div.carousel-item .carousel-caption {
+    bottom: 3rem !important;
+    padding: 1rem !important;
+    color: #000 !important;
+    background: rgba(255, 255, 255, 0.85); }
+    div.carousel-item .carousel-caption a {
+      font-size: 26px;
+      font-weight: 700;
+      color: #236192; }
+      div.carousel-item .carousel-caption a:hover {
+        text-decoration: underline;
+        cursor: pointer; }
 
 .fixed {
   position: fixed;
