--- a/css/styles.css
+++ b/css/styles.css
@@ -60,13 +60,18 @@ nav div.logo-container {
   padding-top: 0.5rem; }
   #feed div.article {
     padding: 0;
-    background: #fff !important; }
+    background: #fff !important;
+    position: relative; }
     #feed div.article img.article-thumb {
       width: 100%;
       height: 200px;
       object-fit: cover; }
     #feed div.article div.article-details {
-      padding: 1rem; }
+      padding: 1rem;
+      height: calc(100% - 200px);
+      display: flex;
+      flex-flow: column;
+      justify-content: space-between; }
       #feed div.article div.article-details p.article-title a {
         font-size: 18px;
         font-weight: 700;
